# zenodo-publisher

./: .gitignore  CLAUDE.md  CONFIG.md  README.md  ZENODO_SETUP.md  llms.md  main.py  pyproject.toml  release.py  zenodo.env.example  zenodo.json.example  zp.bash  zp_test.sh
assets/: demo.txt  demo_1.cast
examples/: archive_to_tree_hash.sh  remote_repo_to_archive.sh  zenodo.env.example  zenodo_config.yaml.example  zp.yaml.example
release_tool/: __main__.py  archive_operation.py  cli.py  config.py  config_archive.py  config_common.py  config_env.py  config_release.py  config_schema.py  config_transform_common.py  config_transform_release.py  errors.py  file_utils.py  git_operations.py  gpg_operations.py  jobs.py  latex_build.py  output.py  pipeline.py  prompts.py  release.py  subprocess_utils.py  zenodo_operations.py
release_tool/config/: archive.py  common.py  env.py  generated_files.py  pattern_overlap.py  release.py  schema.py  signing.py  test.py  transform_common.py  transform_release.py  yaml.py
release_tool/modules/: README.md  __init__.py  _shared.py
release_tool/modules/digicert_timestamp/: DIGICERT_TSA_CHAIN.md  README.md  digicert_timestamp.py  main.py  pyproject.toml  test_module_digicert_timestamp.py  verify_tsr.py
release_tool/modules/digicert_timestamp/tests/: test_module_digicert_timestamp.py
release_tool/modules/digicert_timestamp/tests/manual/: manifest-v2.0.22.json  manifest-v2.0.22.json.tsr  test_manual_verify_digicert.py
release_tool/modules/ots_timestamp/: README.md  ots_timestamp.py  ots_verify.py  pyproject.toml
release_tool/modules/ots_timestamp/tests/: test_module_ots_timestamp.py
release_tool/pipeline/: __init__.py  _common.py  archive.py  checkpoint.py  context.py  release.py
tests/: .gitignore  README.md  conftest.py  run_module_tests.py  runner.py
tests/e2e/: test_00_reset.py  test_01_run.py  test_02_config.py  test_03_git.py  test_04_archive.py  test_05_release_archive.py  test_06_sign.py  test_07_env.py  test_08_tag.py  test_09_override.py  test_10_pattern.py  test_11_config_yaml_keys.py  test_12_modules.py  test_13_caching.py  test_14_modules_standalone.py  test_15_jobs.py  test_16_jobs.py  test_17_module_helpers.py
tests/manual/: utils.py
tests/manual/git/: test_git.py  test_git_template_sha.py
tests/manual/github/: test_github.py
tests/manual/zenodo/: test_zenodo.py
tests/template_repo/: zenodo_config.yaml
tests/test_00_reset/: test.py
tests/test_01_archive_basic/: test.config.yaml
tests/utils/: cli.py  fs.py  git.py  github.py  ndjson.py  proxy.py  sandbox.py  zenodo.py
