[project]
name = "zenodo-publisher"
version = "0.1.0"
description = "Local CLI tool for publishing LaTeX and compiled projects to Zenodo from git repo"
requires-python = ">=3.10"
dependencies = [
    "interegular>=0.3.3",
    "inveniordm-py>=0.1.1",
    "jcs==0.2.1",
    "python-gnupg>=0.5.6",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.scripts]
zenodo-publisher = "release_tool.cli:main"
zp = "release_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["release_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
# clear tmp test between each test
tmp_path_retention_policy = "none"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
